# EDGAR-to-Model

./: .env  .env.example  .gitignore  Makefile  README.md  batch.sh  docker-compose.yml  fix_marketdata.sh  pyproject.toml  run_pack_safe.sh
artifacts/AAPL/: model.xlsx
artifacts/GOOG/: data.json
artifacts/META/: model.xlsx
artifacts/MSFT/: data.json  model.xlsx
artifacts/NVDA/: model.xlsx
artifacts/TSLA/: data.json  model.xlsx
config/mappings/: us_gaap.yml
src/edgar_model_builder/: artifacts.py  cli.py  comps.py  comps.py.bak.1769938146  db.py  excel_builder.py  ingest.py  mappings.py  marketdata.py.bak.20260201_144138  marketdata.py.broken.20260201_141632  models.py  normalize.py  pdf_builder.py  query.py  sec_client.py  settings.py
tests/: test_imports.py
